// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should be able to render correctly 1`] = `
<body>
  <div>
    <form>
      <div
        class="sc-bdnylx giBOeI"
      >
        <input
          id="name"
          type="text"
          value=""
        />
      </div>
    </form>
  </div>
</body>
`;

exports[`<Input /> should be able to render correctly when disabled 1`] = `
<body>
  <div>
    <form>
      <div
        class="sc-bdnylx giBOeI"
      >
        <input
          disabled=""
          id="name"
          type="text"
          value=""
        />
      </div>
    </form>
  </div>
</body>
`;

exports[`<Input /> should be able to render correctly within label 1`] = `
<body>
  <div>
    <form>
      <div
        class="sc-bdnylx giBOeI"
      >
        <label
          for="name"
        >
          Name:
        </label>
        <input
          id="name"
          type="text"
          value=""
        />
      </div>
    </form>
  </div>
</body>
`;
